# handler/form/view.go
@@ -14,7 +14,6 @@ import (
 // @Accept application/json
 // @Produce application/json
 // @Param Authorization header string true "token 用户令牌"
-// @Param Authorization header string true "token"
 // @Success 200
 // @Router /form/view [get]
 func View(c *gin.Context) {
